# Driverless_AGI

./: .gitignore  AGENTS.md  CLAUDE.local.md  README.md  SOUL.md  TODO.md  _check_fields.py  _probe.py  _smoke_test.py  app.py  article.md  cli.py  config.example.yaml  hist.py  main.py  plan.md  pyproject.toml  say.ps1
.claude/: settings.local.json
.dagi/: dagi_simplified.jsonl
.dagi/plans/: plan_20260418_144229.md
.dagi/prompts/: compact_system.md  compact_user.md  explore_files.md  main_system.md  plan_subagent.md  web_research.md
.dagi/self-review/: plan_2026-04-26_15-20-10.md  review_2026-04-25_18-04-49.md  review_2026-04-26_05-30-46.md  review_2026-04-26_15-20-10.md  review_2026-04-26_15-24-09.md
.dagi/tools/: datetime_now.py  parse_session_log.py
agent/: base_tool.py  config_loader.py  loop.py  prompts.py  registry.py  session.py  skills.py  sub_agent.py  tools.py
archive/nicegui_app/: callbacks.py  history.py  main.py  state.py
logs/: session_2026-04-12_14-30-06.jsonl
nicegui_app/: callbacks.py  history.py
nicegui_app/components/: tool_card.py
projects/project_intelligence_agent/: todo.md
prompt_opt/: evaluator.py  initial_prompt.txt  llm_client.py  optimizer.py  run.py  scoring.py  viz.py
scripts/: build_api_tools.py  dagi_freeze.py
tools/: _path_guard.py  ask_user.py  bash.py  compact.py  edit.py  explore_files.py  find.py  grep.py  plan_mode.py  plan_subagent.py  read.py  run_skill_script.py  run_tool.py  show_plan.py  skill.py  switch_model.py  tool_search.py  web_fetch.py  web_research.py  web_search.py  write.py
(+44 files in other folders)
